--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,35 +38,60 @@ services:
   nifi:
     hostname: nifi.local
     container_name: nifi_persistent
+    #image: apache/nifi:2.0.0-M1
     build:
-        context: ./init/nifi
-        dockerfile: Dockerfile
+      context: ./init/nifi
+      dockerfile: Dockerfile
     depends_on:
-        - kafka-broker-1
-        - postgres
-    restart: on-failure
+      - kafka-broker-1
+      - postgres
     ports:
-        - '8091:8091'
+      - '8091:8091'
     environment:
-        - NIFI_WEB_HTTPS_HOST=0.0.0.0
-        - NIFI_WEB_HTTPS_PORT=8091
-        - NIFI_SENSITIVE_PROPS_KEY='12345678901234567890A'
-    healthcheck:
-        test: ["CMD", "bin/nifi.sh",  "status", "| grep -i running"]
-        interval: "60s"
-        timeout: "3s"
-        start_period: "5s"
-        retries: 5
+      - NIFI_WEB_HTTPS_HOST=0.0.0.0
+      - NIFI_WEB_HTTPS_PORT=8091
+      - NIFI_SENSITIVE_PROPS_KEY='12345678901234567890A'
     volumes:
-        - ./nifi/database_repository:/opt/nifi/nifi-current/database_repository
-        - ./nifi/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository
-        - ./nifi/content_repository:/opt/nifi/nifi-current/content_repository
-        - ./nifi/provenance_repository:/opt/nifi/nifi-current/provenance_repository
-        - ./nifi/state:/opt/nifi/nifi-current/state
-        - ./nifi/logs:/opt/nifi/nifi-current/logs
-        - ./nifi/conf:/opt/nifi/nifi-current/persists-conf
+      - ./nifi/database_repository:/opt/nifi/nifi-current/database_repository
+      - ./nifi/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository
+      - ./nifi/content_repository:/opt/nifi/nifi-current/content_repository
+      - ./nifi/provenance_repository:/opt/nifi/nifi-current/provenance_repository
+      - ./nifi/state:/opt/nifi/nifi-current/state
+      # - ./nifi/conf:/opt/nifi/nifi-current/persists-conf
     networks:
-      - local_dev
+      - local_dev 
+
+  # nifi:
+  #   hostname: nifi.local
+  #   container_name: nifi_persistent
+  #   build:
+  #       context: ./init/nifi
+  #       dockerfile: Dockerfile
+  #   depends_on:
+  #       - kafka-broker-1
+  #       - postgres
+  #   restart: on-failure
+  #   ports:
+  #       - '8091:8091'
+  #   environment:
+  #       - NIFI_WEB_HTTPS_HOST=0.0.0.0
+  #       - NIFI_WEB_HTTPS_PORT=8091
+  #       - NIFI_SENSITIVE_PROPS_KEY='12345678901234567890A'
+  #   healthcheck:
+  #       test: ["CMD", "bin/nifi.sh",  "status", "| grep -i running"]
+  #       interval: "60s"
+  #       timeout: "3s"
+  #       start_period: "5s"
+  #       retries: 5
+  #   volumes:
+  #       - ./nifi/database_repository:/opt/nifi/nifi-current/database_repository
+  #       - ./nifi/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository
+  #       - ./nifi/content_repository:/opt/nifi/nifi-current/content_repository
+  #       - ./nifi/provenance_repository:/opt/nifi/nifi-current/provenance_repository
+  #       - ./nifi/state:/opt/nifi/nifi-current/state
+  #       # - ./nifi/conf:/opt/nifi/nifi-current/persists-conf
+  #   networks:
+  #     - local_dev
 
   postgres:
     hostname: postgres.local
@@ -80,7 +105,7 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
-      - ./init/db:/docker-entrypoint-initdb.d
+      - ./postgres/init:/docker-entrypoint-initdb.d
     networks:
       - local_dev
       
