--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,64 +36,33 @@ services:
       - local_dev
 
   nifi:
+    user: 1000:1000
     hostname: nifi.local
+    image: apache/nifi:2.0.0-M1
     container_name: nifi_persistent
-    #image: apache/nifi:2.0.0-M1
-    build:
-      context: ./init/nifi
-      dockerfile: Dockerfile
     depends_on:
-      - kafka-broker-1
-      - postgres
+     - kafka-broker-1
+     - postgres
     ports:
       - '8091:8091'
     environment:
       - NIFI_WEB_HTTPS_HOST=0.0.0.0
       - NIFI_WEB_HTTPS_PORT=8091
+      - NIFI_CLUSTER_IS_NODE=false
       - NIFI_SENSITIVE_PROPS_KEY='12345678901234567890A'
     volumes:
-      - ./nifi/database_repository:/opt/nifi/nifi-current/database_repository
-      - ./nifi/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository
-      - ./nifi/content_repository:/opt/nifi/nifi-current/content_repository
-      - ./nifi/provenance_repository:/opt/nifi/nifi-current/provenance_repository
-      - ./nifi/state:/opt/nifi/nifi-current/state
-      # - ./nifi/conf:/opt/nifi/nifi-current/persists-conf
+      - ./nifi/database_repository:/opt/nifi/nifi-current/database_repository:rw
+      - ./nifi/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository:rw
+      - ./nifi/content_repository:/opt/nifi/nifi-current/content_repository:rw
+      - ./nifi/provenance_repository:/opt/nifi/nifi-current/provenance_repository:rw
+      - ./nifi/state:/opt/nifi/nifi-current/state:rw
+      - ./nifi/conf:/opt/nifi/nifi-current/conf:rw
+      - ./nifi/flow:/opt/nifi/nifi-current/persists-flow
     networks:
       - local_dev 
 
-  # nifi:
-  #   hostname: nifi.local
-  #   container_name: nifi_persistent
-  #   build:
-  #       context: ./init/nifi
-  #       dockerfile: Dockerfile
-  #   depends_on:
-  #       - kafka-broker-1
-  #       - postgres
-  #   restart: on-failure
-  #   ports:
-  #       - '8091:8091'
-  #   environment:
-  #       - NIFI_WEB_HTTPS_HOST=0.0.0.0
-  #       - NIFI_WEB_HTTPS_PORT=8091
-  #       - NIFI_SENSITIVE_PROPS_KEY='12345678901234567890A'
-  #   healthcheck:
-  #       test: ["CMD", "bin/nifi.sh",  "status", "| grep -i running"]
-  #       interval: "60s"
-  #       timeout: "3s"
-  #       start_period: "5s"
-  #       retries: 5
-  #   volumes:
-  #       - ./nifi/database_repository:/opt/nifi/nifi-current/database_repository
-  #       - ./nifi/flowfile_repository:/opt/nifi/nifi-current/flowfile_repository
-  #       - ./nifi/content_repository:/opt/nifi/nifi-current/content_repository
-  #       - ./nifi/provenance_repository:/opt/nifi/nifi-current/provenance_repository
-  #       - ./nifi/state:/opt/nifi/nifi-current/state
-  #       # - ./nifi/conf:/opt/nifi/nifi-current/persists-conf
-  #   networks:
-  #     - local_dev
-
   postgres:
+    user: 1000:1000
     hostname: postgres.local
     container_name: postgres
     image: postgres:16.1
